<resources>
    <string name="app_name">Application</string>
    <string name="start_service">Start Service</string>
    <string name="stop_services">Stop Services</string>
    <string name="enter">Enter</string>
    <string name="theme">Theme</string>
    <string name="myimage">myImage</string>
    <string name="phone_number">phone number</string>
    <string name="in_house_app">In-HOUSE APP</string>
    <string name="send">Send</string>
    <string name="keywords">Keywords</string>
</resources>
