<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="101dp"
        android:layout_marginRight="101dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phone_number"
        android:imeOptions="actionDone"
        android:inputType="phone"
        android:textColor="#090808"
        android:textColorHint="#111111">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="171dp"
        android:layout_marginLeft="171dp"
        android:layout_marginTop="12dp"
        android:background="#0099FF"
        android:text="@string/enter"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_alignEnd="@+id/editText1"
        android:layout_alignRight="@+id/editText1"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="98dp"
        android:layout_marginLeft="98dp"
        android:layout_marginTop="257dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:onClick="startService"
        android:text="@string/start_service" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:onClick="stopService"
        android:text="@string/stop_services" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="334dp"
        android:layout_marginRight="334dp"
        android:layout_marginBottom="578dp"
        android:background="#2E0252"
        android:contentDescription="@string/myimage"
        android:hapticFeedbackEnabled="false"
        android:scaleType="centerInside"
        android:scrollbarDefaultDelayBeforeFade="10000"
        android:scrollbarFadeDuration="1000"
        android:scrollbarTrackVertical="@mipmap/ic_launcher_round"
        android:visibility="visible"
        app:srcCompat="@mipmap/ic_launcher_round"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:text="@string/in_house_app"
        android:textColor="#050505"
        android:textSize="36sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="151dp"
        android:layout_marginRight="151dp"
        android:layout_marginBottom="48dp"
        android:text="@string/send"
        android:visibility="invisible"
        tools:visibility="invisible" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="233dp"
        android:layout_marginRight="233dp"
        android:layout_marginBottom="405dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Keywords"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="98dp"
        android:layout_marginLeft="96dp"
        android:layout_marginBottom="353dp"
        android:text="2. 703111 - Wifi Enable"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="96dp"
        android:layout_marginBottom="323dp"
        android:text="3. 703120 - Silent to Ringer"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginBottom="263dp"
        android:text="5. 703140 - GPS Retriever"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginBottom="294dp"
        android:text="4. 703130 - Lock Screen"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="98dp"
        android:layout_marginLeft="96dp"
        android:layout_marginBottom="385dp"
        android:text="1. 703110 - Wifi Disable"
        android:textSize="20dp" />


</RelativeLayout>